--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -42,4 +42,5 @@ feign:
           url: http://localhost:8078/api/v1
       auth-api:
         service:
-          url: http://localhost:8078/api/v1
+          url: https://run.mocky.io/v3/0fc38c00-722a-47ee-aabf-b07f54a7bf46
+          #TRUE https://run.mocky.io/v3/b7083ab0-07bb-4d9f-8444-623d88b92a89
