feat: add unit test

--- a/compose.yaml
+++ b/compose.yaml
@@ -9,3 +9,9 @@ services:
       POSTGRES_DB: patients
     ports:
       - 5432:5432
+  cache:
+    image: redis:6.2-alpine
+    restart: always
+    ports:
+      - '6379:6379'
+    command: redis-server --save 20 1 --loglevel warning
