--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,33 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.12</version>
+				<configuration>
+					<dataFile>${jacoco.execution.data.file}</dataFile>
+					<excludes>
+						<exclude>com/tc/ff/payments_api/core/domain/entity/*</exclude>
+						<exclude>com/tc/ff/payments_api/core/domain/mapper/*</exclude>
+						<exclude>**/config/*</exclude>
+					</excludes>
+				</configuration>
+				<executions>
+					<execution>
+						<id>prepate-agent</id>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>report</id>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 
